# RP2040-v6-HAT-FREERTOS-C

./: .gitmodules  CMakeLists.txt  README.md  rp2040_v6_hat_freertos_c-patch.cmake  rp2040_v6_hat_freertos_c_sdk_version.cmake
examples/: CMakeLists.txt
examples/AddressAutoConfiguration/: AddressAutoConfig.c  CMakeLists.txt  README.md  w6x00_AAC.c
libraries/: CMakeLists.txt
port/: CMakeLists.txt
port/io6Library/inc/: w6x00_gpio_irq.h  w6x00_spi.h
port/io6Library/src/: w6x00_gpio_irq.c  w6x00_spi.c
static/documents/: getting_started.md
